<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:scrollbars="vertical"
                android:paddingEnd="5dp"
                android:paddingStart="5dp">

                <AutoCompleteTextView
                    android:layout_marginTop="5dp"
                    android:layout_width="match_parent"
                    android:layout_marginBottom="5dp"
                    android:hint="@string/nome_da_disciplina"
                    android:layout_height="wrap_content"
                    android:id="@+id/adicionar_disciplina"
                    android:singleLine="true"
                    />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingRight="5dp"
                    android:paddingLeft="5dp"
                    android:orientation="horizontal">

                    <RadioGroup
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="3"
                        android:id="@+id/rg_tipo_disciplina"
                        android:orientation="vertical"
                        android:layout_gravity="center_vertical"

                        android:paddingEnd="3dp">

                        <RadioButton
                            android:layout_gravity="center_vertical"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:id="@+id/disciplina_presencial"
                            android:text="@string/tipo_presencial"
                            android:checked="true"/>

                        <RadioButton
                            android:gravity="center_vertical"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:id="@+id/disciplina_ead"
                            android:text="@string/tipo_ead"
                            />

                    </RadioGroup>

                    <EditText
                        android:layout_width="0dp"
                        android:id="@+id/disciplina_sala"
                        android:layout_height="0dp"
                        android:layout_weight="0"
                        android:hint="Sala"
                        android:singleLine="true"/>

                </LinearLayout>

                <EditText
                    android:layout_width="match_parent"
                    android:hint="@string/nome_professor"
                    android:layout_height="wrap_content"
                    android:id="@+id/edt_professor"
                    android:singleLine="true" />

            </LinearLayout>

        </ScrollView>

    <LinearLayout
        style="?android:attr/buttonBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingEnd="5dp"
        android:paddingStart="5dp">

        <Button
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/fechar"
            android:id="@+id/bt_cancelar"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:onClick="bt_Dialog" />

        <Button
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/adicionar"
            android:id="@+id/bt_adicionar"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:onClick="bt_Dialog" />

</LinearLayout>

</LinearLayout>