<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="5dp"
    android:paddingRight="5dp"
    android:paddingLeft="5dp"
    android:paddingBottom="5dp"
    android:weightSum="1">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Selecione a Disciplina: "/>

    <Spinner
        style="?android:attr/buttonBarButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/spiner_horarios"
        android:prompt="@string/disciplina"
        android:layout_gravity="center"
        android:paddingTop="5dp"
        android:paddingBottom="5dp">

    </Spinner>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray">

    </LinearLayout>

    <TableLayout
        android:layout_marginTop="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:stretchColumns="0,1">


    </TableLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        >

        <CheckBox
            android:id="@+id/cb_aula1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="1ª Aula"/>

        <CheckBox
            android:id="@+id/cb_aula2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="2ª Aula"/>

        <CheckBox
            android:id="@+id/cb_aula3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="3ª Aula"/>

        <CheckBox
            android:id="@+id/cb_aula4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="4ª Aula"/>



    </LinearLayout>


    <LinearLayout
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray">
    </LinearLayout>


    <LinearLayout
        style="?android:attr/buttonBarStyle"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingEnd="5dp"
        android:paddingStart="5dp">

        <Button
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/fechar"
            android:id="@+id/btHorario_cancelar"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:onClick="bt_DialogHorario" />

        <Button
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/adicionar"
            android:id="@+id/btHorario_adicionar"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:onClick="bt_DialogHorario" />

    </LinearLayout>

</LinearLayout>